--- a/src/components/PortfolioCard.css
+++ b/src/components/PortfolioCard.css
@@ -13,12 +13,6 @@
   cursor: pointer;
 }
 
-.portfolio-card::before {
-  content: "";
-  display: block;
-  padding-bottom: calc(100% * 4.03 / 7.5); /* Fallback for older browsers */
-}
-
 .portfolio-card:hover {
   box-shadow: 0px 4px 10px rgba(0, 255, 0, 0.6);
 }
@@ -32,14 +26,21 @@
   color: white;
   padding: 20px;
   width: 30vw;
-  height: 80vh;
+  height: 60vh; /* Set height to auto */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border: 1px solid #ddd;
-  transition: all 0.3s ease-in-out;
+  transition: height 0.3s ease-in-out;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Minimized state */
+.card-content.minimized {
+  height: 15vh; /* Reduce height to 15vh */
+  overflow: hidden; /* Hide overflow */
+  justify-content: center; /* Center content */
 }
 
 /* Heading inside the card */
@@ -72,6 +73,15 @@
   background-color: #218838;
 }
 
+/* Extend symbol */
+.extend-symbol {
+  cursor: pointer;
+  font-size: 1.5rem; /* Adjust size for visibility */
+  color: white;
+  text-align: center; /* Center the symbol */
+  margin-top: 10px; /* Space above */
+}
+
 /* Category badge */
 .category-badge {
   position: absolute;
@@ -89,12 +99,15 @@
 @media (max-width: 768px) {
   .portfolio-card {
     width: 90vw;
-    aspect-ratio: 7.5 / 4.03; /* Keep the aspect ratio on smaller screens */
   }
 
   .card-content {
-    width: 50vw; /* Reduce text box width on smaller screens */
-    height: 30vh; /* Reduce height of text box */
+    width: 30vw; /* Reduce text box width on smaller screens */
+    height: 20vh;
+  }
+
+  .card-content.minimized {
+    height: 15vh; /* Maintain minimized height */
   }
 
   .card-content h3 {
@@ -113,7 +126,10 @@
 
   .card-content {
     width: 60vw; /* Make text block smaller */
-    height: 25vh;
+  }
+
+  .card-content.minimized {
+    height: 15vh; /* Maintain minimized height */
   }
 
   .card-content h3 {
