--- a/src/components/Bloggroup.css
+++ b/src/components/Bloggroup.css
@@ -73,6 +73,14 @@
     background: transparent;
     text-transform: uppercase;
     transition: background-color 0.3s ease;
+    margin-bottom: 10px;
+}
+.btn-border-base.mt-3 {
+    margin-bottom: 10px;
+}
+
+.btn-border-base.ml-2 {
+    margin-left: 10px; /* Add margin to separate buttons */
 }
 
 .btn-border-base:hover {
