backend now frontend only one feedback

--- a/src/app/portfolio/portfolio.css
+++ b/src/app/portfolio/portfolio.css
@@ -4,6 +4,8 @@
     margin: 5vh 2vw;
     padding-top: 20px;
     padding-bottom: 20px;
+    text-align: center;
+
   }
   
   /* Portfolio title */
