--- a/public/assets/scss/sections/_section-title.scss
+++ b/public/assets/scss/sections/_section-title.scss
@@ -20,7 +20,7 @@
     box-shadow: none;
     background: transparent;
     padding: 0;
-    color: #50af9b;
+    color: #86c445;
     text-transform: uppercase;
     font-weight: 600;
   }
