--- a/public/assets/scss/sections/_preloader.scss
+++ b/public/assets/scss/sections/_preloader.scss
@@ -1,47 +1,33 @@
 .preloader {
-  position: fixed;
+  position: absolute; /* Changed from fixed */
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: 999;
-  background-color: #101A29;
+  z-index: 1; /* Lower z-index if other components should overlay */
+  background-color: rgba(37, 37, 37, 0.7); /* Optional semi-transparent background */
 
-  .btn {
-    padding: 15px 20px;
-    border-radius: 0;
-    font-size: 14px;
-    text-transform: capitalize;
-    &:after {
-      border-radius: 0;
-    }
-  }
+  display: flex; /* Centering content */
+  justify-content: center;
+  align-items: center;
 }
 
 .preloader-inner {
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
   line-height: 1;
 
   img {
     display: block;
-    margin: 0 auto 10px auto;
+    margin: 0 auto 10px;
   }
 }
+
 .loader {
   color: #ffffff;
   font-size: 45px;
-  text-indent: -9999em;
-  overflow: hidden;
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  position: relative;
-  transform: translateZ(0);
   animation: mltShdSpin 1.7s infinite ease, round 1.7s infinite ease;
   display: inline-block;
 }
