--- a/src/components/PortfolioCard.css
+++ b/src/components/PortfolioCard.css
@@ -1,17 +1,22 @@
 /* General Card Layout */
 .portfolio-card {
-  display: flex;
+ display: flex;
   flex-direction: column;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  
   background-color: #ffffff;
   transition: transform 0.3s ease;
   min-height: 400px; /* Ensures consistent height */
+ 
 }
-
-.portfolio-card:hover {
+.portfolio-card:hover{
+  box-shadow: 10px 4px 8px rgba(157, 211, 87, 0.322);
+  transition: 0.6s;
+}
+.portfolio-card-img:hover {
   transform: scale(1.05);
+  transition: 0.6s;
 }
 
 .portfolio-card-img {
@@ -65,10 +70,11 @@
 /* Portfolio Grid Layout */
 .portfolio-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2x2 grid for the cards */
+  grid-template-columns: repeat(2, 1fr); 
   gap: 20px;
   margin: 0 auto;
   padding: 20px;
+  
 }
 
 /* Responsive layout: Single column on smaller screens */
